--- a/Project/about.html
+++ b/Project/about.html
@@ -13,11 +13,11 @@
             </NAV>
             <div id = "pop-up">
 			<div class = "container">
-                <p>About Us ---</p>
+                <p>About Us <BR><BR> Team Name: Team 1 <BR> Project Title: Music Management System</p>
             </div>
             </div>
                 <footer id = "footx">
-                    <center>Made By Team 1</center>
+                    <center>Made With love By Team 1</center>
                 </footer>
 		</BODY>
 	</HEAD>
