--- a/Project/admin.html
+++ b/Project/admin.html
@@ -11,20 +11,22 @@
                     <li><a href="admin.html">Admin</a></li>
                 </ul>
             </NAV>
-            <div id = "pop-up">
+	<div id = "pop-up">
+	<form action = "index_check.php" method = "post">
 			<div class = "container">
-			<FORM ACTION = "php1.php" METHOD = "post">
-				<FONT>Enter ID</FONT>
-                <INPUT TYPE = "TEXT" NAME = "ID" PLACEHOLDER = "Enter ID">
-                    <BR>
-                        <FONT>Enter Password</FONT>
-                        <INPUT TYPE = "Password" NAME = "Password" PLACEHOLDER = "Enter Password">
-				<INPUT TYPE = "SUBMIT" NAME = "SUBMIT" VALUE = "SUBMIT">
-			</FORM>
-            </div>
-            </div>
+			<br>
+			<input type = "text" name="username" placeholder = "Enter ID">
+			<br>
+			<br>
+			<input type = "password" name="password" placeholder = "Enter Password">
+			<br>
+			<br>
+			<button>Submit</button>
+	</form>
+		</div>
+	</div>
                 <footer id = "footx">
-                    <center>Made By Team 1</center>
+                    <center>Made With love By Team 1</center>
                 </footer>
 		</BODY>
 	</HEAD>
