--- a/Project/contacts.html
+++ b/Project/contacts.html
@@ -13,11 +13,11 @@
             </NAV>
             <div id = "pop-up">
 			<div class = "container">
-                <p>Contact Us At ---</p>
+                <p>Contact Us On Whatspp And Facebook!</p>
             </div>
             </div>
                 <footer id = "footx">
-                    <center>Made By Team 1</center>
+                    <center>Made With love By Team 1</center>
                 </footer>
 		</BODY>
 	</HEAD>
